--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>curator-recipes</artifactId>
             <version>${curator-version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.22.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
